--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "chart.js": "^4.4.7",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
@@ -26,6 +28,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.10.5",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
