--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.25.0",
     "axios": "^1.6.7",
     "chart.js": "^4.4.7",
@@ -21,8 +22,10 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.22.3",
     "recharts": "^2.12.2",
+    "redux-persist": "^6.0.0",
     "tailwind-merge": "^2.2.1",
     "zustand": "^4.5.2"
   },
